tools/intel_gpu_frequency: fix device opening

High-level device open cleans device cache before running a test
by using debugfs. This may be a problem when using a tool to
change GPU frequency as there are systems with debugfs turned off
or protected, as seen in bug report:

(intel_gpu_frequency:14896) igt_debugfs-CRITICAL: Test assertion failure function igt_drop_caches_set, file ../lib/igt_debugfs.c:1142:

[ 3553.930373] Lockdown: intel_gpu_frequ: debugfs access is restricted; see man kernel_lockdown.7
none [integrity] confidentiality

intel_gpu_frequency is the tool, not a test, so fixed this by
using more suitable device opening function.

Closes: https://gitlab.freedesktop.org/drm/igt-gpu-tools/-/issues/146
Cc: Tvrtko Ursulin <tvrtko.ursulin@linux.intel.com>
Signed-off-by: Kamil Konieczny <kamil.konieczny@linux.intel.com>
Reviewed-by: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>